--- a/src/shared/api/schema/main.yaml
+++ b/src/shared/api/schema/main.yaml
@@ -4,6 +4,15 @@ info:
   description: API for a collaborative whiteboard application similar to Miro
   version: 1.0.0
 paths:
+  paths:
+  /auth/login:
+    post:
+      $ref: "./endpoints/auth.yaml#/login"
+
+  /auth/register:
+    post:
+      $ref: "./endpoints/auth.yaml#/register"
+
   /boards:
     get:
       $ref: "./endpoints/boards.yaml#/getAllBoards"
