--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@tanstack/react-query": "^5.90.12",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.556.0",
     "openapi-fetch": "^0.15.0",
     "openapi-react-query": "^0.5.1",
@@ -42,6 +43,7 @@
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
+    "jose": "^6.1.3",
     "msw": "^2.12.4",
     "openapi-msw": "^2.0.0",
     "openapi-typescript": "^7.10.1",
