--- a/src/shared/api/schema/endpoints/boards.yaml
+++ b/src/shared/api/schema/endpoints/boards.yaml
@@ -19,8 +19,8 @@ schemas:
 
 getAllBoards:
   summary: Get all boards for current user
-  # security:
-  #   - bearerAuth: []
+  security:
+    - bearerAuth: []
   responses:
     "200":
       description: List of boards
@@ -35,8 +35,8 @@ getAllBoards:
 
 createBoard:
   summary: Create a new board
-  # security:
-  #   - bearerAuth: []
+  security:
+    - bearerAuth: []
   requestBody:
     required: true
     content:
@@ -55,8 +55,8 @@ createBoard:
 
 deleteBoard:
   summary: Delete a board
-  # security:
-  #   - bearerAuth: []
+  security:
+    - bearerAuth: []
   parameters:
     - name: boardId
       in: path
