--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@tanstack/react-query": "^5.90.12",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "create-gstore": "^0.2.0",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.556.0",
     "openapi-fetch": "^0.15.0",
